<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/ma_tv_shape"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ma_tv_shape"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/ma_rg_shape"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ma_tv_shape">

        <RadioButton
            android:id="@+id/ma_rb_circle"
            style="@style/ma_rb_style"
            android:contentDescription="@string/ma_rb_circle"
            android:text="@string/ma_rb_circle"
            tools:text="@string/ma_rb_circle_shape" />

        <RadioButton
            android:id="@+id/ma_rb_triangle"
            style="@style/ma_rb_style"
            android:contentDescription="@string/ma_rb_triangle"
            android:text="@string/ma_rb_triangle"
            tools:text="@string/ma_rb_triangle_shape" />

        <RadioButton
            android:id="@+id/ma_rb_square"
            style="@style/ma_rb_style"
            android:contentDescription="@string/ma_rb_square"
            android:text="@string/ma_rb_square"
            tools:text="@string/ma_rb_square_shape" />

        <RadioButton
            android:id="@+id/ma_rb_rectangle"
            style="@style/ma_rb_style"
            android:contentDescription="@string/ma_rb_rectangle"
            android:text="@string/ma_rb_rectangle"
            tools:text="@string/ma_rb_rectangle_shape" />
    </RadioGroup>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ma_rg_shape">

        <TextView
            android:id="@+id/ma_tv_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>